fix horizontal scroll bar

--- a/sphinx_search/_static/css/rtd_sphinx_search.css
+++ b/sphinx_search/_static/css/rtd_sphinx_search.css
@@ -61,6 +61,7 @@
 
 .search__outer::-webkit-scrollbar {
     width: 7px;
+    height: 7px;
     background-color: #fcfcfc;
 }
 
